// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard Component Snapshots should maintain consistent column widths with long URLs 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 1 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   VeryLongMoni -        very-long...le.http   ✔ UP   100ms   99.99%    None                │ │
│ │     torNameThatS          com                                                                │ │
│ │     houldBeTrunc                                                                             │ │
│ │     ated                                                                                     │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render SSL monitor with critical expiry (<=7 days) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 1 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ SSL Certificate Monitors                                                                         │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #    Name            Host               Status      Days Left Expires      Issuer            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1    Critical SSL    urgent.com         ⚠ EXPIRING  3 days    12/1/2024    Comodo            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render SSL monitor with expiring certificate (warning) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 1 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ SSL Certificate Monitors                                                                         │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #    Name            Host               Status      Days Left Expires      Issuer            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1    Expiring SSL    example.com        ⚠ WARNING   17 days   12/15/2024   Let's Encrypt     │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render empty state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 0 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│                                                                                                  │
│  No monitors found. Run \`uptimekit add\` to add one.                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render mixed regular and SSL monitors 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 3 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   Main Site    -        mainsite.com   http   ✔ UP   95ms    99.95%    None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 2   API Server   -        api.mainsite.cohttp   ✔ UP   45ms    99.90%    1 day ago           │ │
│ │                           m                                                                  │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ SSL Certificate Monitors                                                                         │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #    Name            Host               Status      Days Left Expires      Issuer            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 3    Main SSL        mainsite.com       ✔ VALID     185 days  6/1/2025     Cloudflare        │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render with SSL monitors 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 1 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ SSL Certificate Monitors                                                                         │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #    Name            Host               Status      Days Left Expires      Issuer            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1    GitHub SSL      github.com         ✔ VALID     180 days  1/1/2025     DigiCert          │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render with multiple monitors (mixed types) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 3 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   Website      -        example.com    http   ✔ UP   120ms   99.99%    None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 2   Google DNS   -        8.8.8.8        icmp   ✔ UP   25ms    100.00%   None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 3   DNS Check    -        google.com     dns    ✔ UP   45ms    99.80%    2 hours ago         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render with single HTTP monitor DOWN 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 0 Up  ● 1 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   Example      -        example.com    http   ✖ DOWN 0ms     85.00%    5 minutes ago       │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should render with single HTTP monitor UP 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 1 Up  ● 0 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   Example      -        example.com    http   ✔ UP   150ms   99.50%    None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Dashboard Component Snapshots should show correct counts in header (up/down) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ UptimeKit Dashboard  ● 2 Up  ● 1 Down  Press 'q' to exit                                         │
│                                                                                                  │
│ Uptime Monitors                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ #   Name         Group    URL            Type   Status Latency Uptime    Last Downtime       │ │
│ │                                                                (24h)                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 1   Up1          -        up1.com        http   ✔ UP   100ms   100%      None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 2   Up2          -        up2.com        http   ✔ UP   100ms   100%      None                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ │ 3   Down1        -        down1.com      http   ✖ DOWN 0ms     50%       now                 │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render HTTP monitor detail - offline 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   OFFLINE   Down Site                                                                      ID: 1 │
│                                                                                Press 'q' to quit │
│ https://down.example.com                                                                         │
│ Type: http • Interval: 30s                                                                       │
│ Webhook: https://webhook.example.com/notify                                                      │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■■■                                                                                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 200 ms           │ │ 50 ms                │ │ 200 ms              │ │ 25.00%                │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render HTTP monitor detail - online 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   ONLINE   Example Site                                                                    ID: 1 │
│                                                                                Press 'q' to quit │
│ https://example.com                                                                              │
│ Type: http • Interval: 60s                                                                       │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■■■■                                                                                        │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 140 ms           │ │ 119 ms               │ │ 160 ms              │ │ 80.00%                │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render HTTP monitor detail with group name 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   ONLINE   Dev API                                                                        ID: 11 │
│                                                                                Press 'q' to quit │
│ https://api.dev.example.com                                                                      │
│ Type: http • Interval: 30s                                                                       │
│ Group: development                                                                               │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■■                                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 125 ms           │ │ 120 ms               │ │ 125 ms              │ │ 100.00%               │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render ICMP monitor detail 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   ONLINE   Google DNS                                                                      ID: 2 │
│                                                                                Press 'q' to quit │
│ 8.8.8.8                                                                                          │
│ Type: icmp • Interval: 30s                                                                       │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■■                                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 22 ms            │ │ 25 ms                │ │ 28 ms               │ │ 100.00%               │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render SSL monitor detail - critical expiry (<=7 days) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  EXPIRING  Critical SSL                                                                    ID: 6 │
│                                                                                Press 'q' to quit │
│ critical.com                                                                                     │
│ Type: SSL Certificate • Interval: 3600s                                                          │
│                                                                                                  │
│ Certificate Status History (Last 40 checks)                                                      │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■                                                                                            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ SSL Certificate Details                                                                      │ │
│ │                                                                                              │ │
│ │ Subject:          critical.com                                                               │ │
│ │ Issuer:           Comodo                                                                     │ │
│ │ Days Remaining:   3 days                                                                     │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐  │
│ │ Days Remaining                               │ │ Validity Rate                              │  │
│ │ 3 days                                       │ │ 100.00%                                    │  │
│ └──────────────────────────────────────────────┘ └────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render SSL monitor detail - expiring certificate (warning) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  WARNING   Expiring SSL                                                                    ID: 5 │
│                                                                                Press 'q' to quit │
│ expiring.com                                                                                     │
│ Type: SSL Certificate • Interval: 3600s                                                          │
│                                                                                                  │
│ Certificate Status History (Last 40 checks)                                                      │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■                                                                                            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ SSL Certificate Details                                                                      │ │
│ │                                                                                              │ │
│ │ Subject:          expiring.com                                                               │ │
│ │ Issuer:           Let's Encrypt                                                              │ │
│ │ Days Remaining:   17 days                                                                    │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐  │
│ │ Days Remaining                               │ │ Validity Rate                              │  │
│ │ 17 days                                      │ │ 100.00%                                    │  │
│ └──────────────────────────────────────────────┘ └────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render SSL monitor detail - invalid certificate 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  INVALID   Expired SSL                                                                     ID: 7 │
│                                                                                Press 'q' to quit │
│ expired.com                                                                                      │
│ Type: SSL Certificate • Interval: 3600s                                                          │
│                                                                                                  │
│ Certificate Status History (Last 40 checks)                                                      │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■                                                                                            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ SSL Certificate Details                                                                      │ │
│ │                                                                                              │ │
│ │ Subject:          expired.com                                                                │ │
│ │ Issuer:           Unknown                                                                    │ │
│ │ Days Remaining:   -330 days                                                                  │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐  │
│ │ Days Remaining                               │ │ Validity Rate                              │  │
│ │ -330 days                                    │ │ 0.00%                                      │  │
│ └──────────────────────────────────────────────┘ └────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render SSL monitor detail - valid certificate 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   VALID    GitHub SSL                                                                      ID: 4 │
│                                                                                Press 'q' to quit │
│ github.com                                                                                       │
│ Type: SSL Certificate • Interval: 3600s                                                          │
│                                                                                                  │
│ Certificate Status History (Last 40 checks)                                                      │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■                                                                                           │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ SSL Certificate Details                                                                      │ │
│ │                                                                                              │ │
│ │ Subject:          github.com                                                                 │ │
│ │ Issuer:           DigiCert Inc                                                               │ │
│ │ Days Remaining:   79 days                                                                    │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐  │
│ │ Days Remaining                               │ │ Validity Rate                              │  │
│ │ 79 days                                      │ │ 100.00%                                    │  │
│ └──────────────────────────────────────────────┘ └────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render SSL monitor detail with group name 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   VALID    Prod SSL                                                                       ID: 12 │
│                                                                                Press 'q' to quit │
│ prod.example.com                                                                                 │
│ Type: SSL Certificate • Interval: 3600s                                                          │
│ Group: production                                                                                │
│                                                                                                  │
│ Certificate Status History (Last 40 checks)                                                      │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■                                                                                           │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ SSL Certificate Details                                                                      │ │
│ │                                                                                              │ │
│ │ Subject:          prod.example.com                                                           │ │
│ │ Issuer:           DigiCert Inc                                                               │ │
│ │ Days Remaining:   79 days                                                                    │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐  │
│ │ Days Remaining                               │ │ Validity Rate                              │  │
│ │ 79 days                                      │ │ 100.00%                                    │  │
│ └──────────────────────────────────────────────┘ └────────────────────────────────────────────┘  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render high latency monitor (>500ms) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   ONLINE   Slow Site                                                                      ID: 10 │
│                                                                                Press 'q' to quit │
│ https://slow.example.com                                                                         │
│ Type: http • Interval: 60s                                                                       │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■■■■                                                                                         │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 650 ms           │ │ 800 ms               │ │ 920 ms              │ │ 100.00%               │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render loading state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ⏳ Loading data...                                                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render monitor with webhook URL 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   ONLINE   Webhook Monitor                                                                 ID: 8 │
│                                                                                Press 'q' to quit │
│ https://webhook-test.com                                                                         │
│ Type: http • Interval: 60s                                                                       │
│ Webhook: https://hooks.slack.com/services/T00000000/B000...                                      │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ ■                                                                                            │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 100 ms           │ │ 100 ms               │ │ 100 ms              │ │ 100.00%               │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render not found state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ❌ Monitor not found.                                                                            │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MonitorDetail Component Snapshots should render with no heartbeat data 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│   OFFLINE   New Monitor                                                                    ID: 9 │
│                                                                                Press 'q' to quit │
│ https://new.example.com                                                                          │
│ Type: http • Interval: 60s                                                                       │
│                                                                                                  │
│ Recent Checks (Last 40)                                                                          │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ No data yet...                                                                               │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌──────────────────┐ ┌──────────────────────┐ ┌─────────────────────┐ ┌───────────────────────┐  │
│ │ Current          │ │ Avg Latency          │ │ Max Latency         │ │ Uptime (24h)          │  │
│ │ 0 ms             │ │ 0 ms                 │ │ 0 ms                │ │ 0.00%                 │  │
│ └──────────────────┘ └──────────────────────┘ └─────────────────────┘ └───────────────────────┘  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
